# tiqtaq

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build-and-test-configurations.sh  cspell.config.yaml
cmake/ROW_TiqTaq/: packaging.cmake
container-toolchains/ubuntu-22.04-lts/: Dockerfile  pipeline.sh
deps-superbuild/: CMakeLists.txt  README.md
exports/: CMakeLists.txt  row_tiqtaqConfig.cmake.in
tests/: CMakeLists.txt  computertests.cpp  gametests.cpp  test.cpp
tiqtaq/: CMakeLists.txt  main.cpp
tiqtaqcore/: CMakeLists.txt
tiqtaqcore/include/row/tiqtaq/: computer.hpp  dummy.hpp  game.hpp  gametypes.hpp  gameviewcontroller.hpp
tiqtaqcore/src/: computer.cpp  dummy.cpp  game.cpp  gameutils.hpp  gameviewcontroller.cpp
